--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,99 @@
-.App {
-  text-align: center;
+.App{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+  max-width: 1367px;
+  width:100vw;
 }
-
-.App-logo {
-  height: 40vmin;
+*{
+  
+  margin:0;
+  padding:0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background:#e7e9ef;
+}
+.flex-row{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.flex-column{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items:center;
 }
+.space-around{
+  justify-content: space-around;
+}
+.space-between{
+  justify-content: space-between;
+}
+.space-evenly{
+  justify-content: space-evenly;
+}
+.justify-center{
+  justify-content: center;
+}
+.icon-10{
+  width:10px;
+  height:10px;
+}
+.icon-14{
+  width:14px;
+  height:14px;
+}
+.icon-24{
+  width:24px;
+  height:24px;
+}
+.icon-45{
+  width:45px;
+  
+}
+.icon-8{
+  width:8px;
+  
+}
+.padding-10{
+  padding:15px;
+}
+.padding-vertical{
+  padding-left:15px;
+  padding-top:15px;
+  padding-right:15px;
+}
+.margin-bottom{
+  margin-bottom:20px;
+}
+.font-small{
+  font-size:10px;
+  color:#a9a9a9;
+}
+.font-smaller{
+  font-size:8px;
+  color:#a9a9a9;
+}
+.margin-right{
+  margin-right:10px;
+}
+.button{
+  background:#465eef;
+  border-radius: 20px;
+  width:fit-content;
+  padding:6px 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: -1px 1px 5px 0px #546af5;
+}
+.button span{
+  font-size: 11px;
+  color:#ffff;
+  cursor: pointer;
 
-.App-link {
-  color: #09d3ac;
 }
